Fix rendering of images with transparent background

--- a/app/_static/page.css
+++ b/app/_static/page.css
@@ -24,6 +24,10 @@ main {
   background-color: var(--secondary-background-color);
 }
 
+img {
+    background-color: #ffffff;
+}
+
 #toggle-theme {
   float: left;
   vertical-align: middle;
